manifests/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust-ingress
  namespace: locust
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: locust-ui-secret
    nginx.ingress.kubernetes.io/auth-realm: "Protected area"
spec:
  rules:
    - host: locust.serve-dev.scilifelab.se #localhost
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: locust-service
                port:
                  number: 80 #8089
  #ingressClassName: nginx
  tls:
    - hosts:
      - locust.serve-dev.scilifelab.se
      secretName: locust-tls
